fix(UI): update UI render overflow in MacOS

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,6 +6,8 @@ body,
 
     width: 100%;
     height: 100%;
+
+    overflow: hidden;
 }
 
 /* Styles for color picker */
@@ -23,4 +25,5 @@ body,
 .color-picker-wrapper .vc-color-wrap {
     width: 240px !important;
 }
+
 /* End of color picker styles */
